config/overlays/prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: herbsfest-basic-auth
spec:
  basicAuth:
    secret: herbsfest-basic-auth
    realm: Ringinger Herbstfest
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: herbsfest-private-cache
spec:
  headers:
    customResponseHeaders:
      Cache-Control: private, no-store
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: herbsfest-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
