config/overlays/prod/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herbsfest
spec:
  template:
    spec:
      containers:
        - name: web
