config/overlays/prod/database-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herbsfest
spec:
  template:
    spec:
      imagePullSecrets:
        - name: oci-registry-cred
      containers:
        - name: web
